--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto&family=Ubuntu:wght@300;700&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="/styles/main.css">
+  <link rel="stylesheet" href="/styles/home.css">
+  <link rel="stylesheet" href="/styles/responsive.css">
 </head>
 
 <body>
@@ -18,7 +20,7 @@
 
       <header>
         <img src="/assets/icones/logo.svg" alt="Logo">
-        <a href="http://www.goole.com">
+        <a href="/create-point.html">
           <span></span>
           Cadastre um ponto de coleta
         </a>
