--- a/create-point.html
+++ b/create-point.html
@@ -16,13 +16,13 @@
   <div id="page-create-point">
     <header>
       <img src="/assets/icones/logo.svg" alt="Logo">
-      <a href="/index.html">
+      <a href="/">
         <span></span>
         Voltar para home
       </a>
     </header>
 
-    <form action="">
+    <form action="" method="GET">
 
       <h1>Cadastro do ponto de coleta</h1>
 
@@ -33,24 +33,24 @@
 
         <div class="field">
           <label for="name">Nome da entidade</label>
-          <input type="text" name="name">
+          <input type="text" name="name" required>
         </div>
 
         <div class="field-group">
           <div class="field">
             <label for="address">Endereço</label>
-            <input type="text" name="address">
+            <input type="text" name="address" required>
           </div>
           <div class="field">
             <label for="address2">Número/Complemento</label>
-            <input type="text" name="address2">
+            <input type="text" name="address2" required>
           </div>
         </div>
 
         <div class="field-group">
           <div class="field">
             <label for="state">Estado</label>
-            <select name="uf">
+            <select name="uf" required>
               <option value="">Selecione o Estado</option>
             </select>
             <input type="hidden" name="state">
@@ -58,7 +58,7 @@
 
           <div class="field">
             <label for="city">Cidade</label>
-            <select name="city" disabled>
+            <select name="city" required disabled>
               <option value="">Selecione a Cidade</option>
             </select>
           </div>
@@ -70,6 +70,41 @@
         <legend>
           <h2>Ítens de coleta</h2>
         </legend>
+
+        <div class="items-grid">
+          <li data-id="1">
+            <img src="/assets/icones/lampadas.svg" alt="Lâmpadas">
+            <span>Lâmpadas</span>
+          </li>
+
+          <li data-id="2">
+            <img src="/assets/icones/baterias.svg" alt="Pilhas e Baterias">
+            <span>Pilhas e Baterias</span>
+          </li>
+
+          <li data-id="3">
+            <img src="/assets/icones/papeis-papelao.svg" alt="Papéis e Papelão">
+            <span>Papéis e Papelão</span>
+          </li>
+
+          <li data-id="4">
+            <img src="/assets/icones/eletronicos.svg" alt="Resíduos Eletrônicos">
+            <span>Resíduos Eletrônicos</span>
+          </li>
+
+          <li data-id="5">
+            <img src="/assets/icones/organicos.svg" alt="Resíduos Orgânicos">
+            <span>Resíduos Orgânicos</span>
+          </li>
+
+          <li data-id="6">
+            <img src="/assets/icones/oleo.svg" alt="Óleo de Cozinha">
+            <span>Óleo de Cozinha</span>
+          </li>
+        </div>
+
+        <input type="hidden" name="items">
+
       </fieldset>
 
       <button type="submit">Cadastrar ponto de coleta</button>
