--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     rel="stylesheet">
   <link rel="stylesheet" href="/styles/main.css">
   <link rel="stylesheet" href="/styles/home.css">
+  <link rel="stylesheet" href="/styles/modal.css">
   <link rel="stylesheet" href="/styles/responsive.css">
 </head>
 
@@ -40,6 +41,27 @@
     </div>
   </div>
 
+  <div id="modal" class="hide">
+    <div class="content">
+      <div class="header">
+        <h1>Pontos de Coleta</h1>
+        <a href="#">Fechar</a>
+      </div>
+
+      <form action="/search-results.html">
+        <label for="search">Cidade</label>
+        <div class="search field">
+          <input type="text" name="search" placeholder="Pesquise por Cidade">
+          <button>
+            <img src="/assets/icones/search.svg" alt="Buscar">
+          </button>
+        </div>
+      </form>
+
+    </div>
+  </div>
+
+  <script src="/scripts/index.js"></script>
 </body>
 
 </html>
